--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
          <td class="home"><a href="https://arihantbooks.com/?srsltid=AfmBOoqTqKojepBdgLD36ZHtG04NvvOJKjMRfnwlIUUJDVsVFh0UGfNL">Home</a></td>
-         <td class="login">Login</td>
+         <td class="login">Lon</td>
          <td class="login">Register</td>
          <td class="login">Catalogue</td>
          <td class="login">Cart</td>
